--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "node-sass": "^4.11.0",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-thunk": "^2.3.0"
   }
 }
