--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Next.js starterKit and extends more and more",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export",
+    "dev": "next ./app",
+    "build": "next build ./app",
+    "start": "next start ./app",
+    "export": "next build ./app && next export ./app -o public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -23,8 +23,10 @@
     "eslint": "^5.11.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.11.1",
     "node-sass": "^4.11.0",
     "prettier": "^1.15.3"
