--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next",
     "dev:export": "cd ./out && python -m SimpleHTTPServer 8000",
     "build": "next build",
+    "build:serverless": "env ENV_SERVELESS=serverless next build",
     "start": "next start",
     "export": "npm run build && next export",
     "test": "echo \"Error: no test specified\" && exit 1"
