--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "eslint": "^5.11.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "node-sass": "^4.11.0",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "typescript": "^3.6.4"
   }
 }
