--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,17 @@ out
 package-lock.json
 yarn.lock
 sw.*
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/team-provider-info.json
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+amplify/backend-config.json
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
