--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@types/react": "^16.9.11",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "aws-amplify": "^1.2.4",
     "eslint": "^5.11.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "immer": "^5.0.0",
+    "nanoid": "^2.1.6",
     "node-sass": "^4.11.0",
     "prettier": "^1.15.3",
     "typescript": "^3.6.4"
