--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@aws-amplify/api": "^1.2.4",
+    "@aws-amplify/core": "^1.2.4",
     "next": "^9.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
@@ -24,7 +26,6 @@
     "@types/react": "^16.9.11",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "aws-amplify": "^1.2.4",
     "eslint": "^5.11.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
