--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -10,3 +10,6 @@ projects:
         codeGenTarget: typescript
         generatedFileName: build/API.ts
         docsFilePath: graphql
+extensions:
+  amplify:
+    version: 3
