--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@aws-amplify/api": "^1.2.4",
     "@aws-amplify/core": "^1.2.4",
+    "@aws-amplify/pubsub": "^2.1.1",
+    "@types/graphql": "^14.5.0",
     "next": "^9.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
