--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "next": "^9.0.2",
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "next": "^9.3.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
@@ -30,7 +32,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.15.3",
     "typescript": "^3.6.4"
   }
